--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -31,7 +31,7 @@
                 <a class="txtG" value="@item.Company_Name">@item.Company_Name</a>
             </td>
             <td>
-                <a class="txtG" value="@item.Industry_Sector">@item.Industry_Sector</a>
+                <a class="txtG" value="@item.IndustrySector_ID">@item.IndustrySector.Industry_Sector</a>
             </td>
             <td>
                 <a class="txtG" value="@item.Contact">@item.Contact</a>
