--- a/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
@@ -60,7 +60,7 @@
     });
 
     $(".editProjectCreation").on("click", function () {
-       
+        debugger;
         var id = $(this).next().val();
         $.ajax({
             url: '@Url.Action("GetProjCreationById","ProjectCreation")',
